--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@moreillon/authentication_middleware",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "A simple authentication middleware for Express",
   "main": "authentication_middleware.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
-    "cookies": "^0.8.0"
+    "cookies": "^0.8.0",
+    "dotenv": "^8.2.0"
   }
 }
